@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.5.0
 
+  *) Windows:  Don't obtain a mutex for buffered file I/O unless the
+     file was opened with the APR_FOPEN_XTHREAD flag.  [Ivan Zhakov
+     <ivan visualsvn.com>]
+
   *) Windows:  Create named shared memory segments under the "Local"
      namespace if the caller is unprivileged, fixing an inability of
      unprivileged callers to use apr_shm_create() with named shared
